--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "optimize:images": "node optimize-images.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gsap": "^3.13.0",
